# todolist-project

./: .env.example  .flake8  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_api.py  todolist.db
alembic/: env.py
src/todolist/: __main__.py  main.py
src/todolist/api/: main.py
src/todolist/api/dependencies/: database.py
src/todolist/api/routes/: __init__.py  projects.py  tasks.py
src/todolist/api/schemas/: __init__.py  project.py  task.py
src/todolist/commands/: __init__.py  autoclose_overdue.py  scheduler.py
src/todolist/db/: init_db.py  session.py
src/todolist/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
src/todolist/models/: __init__.py  project.py  task.py
src/todolist/repositories/: __init__.py  base.py  project_repository.py  task_repository.py
src/todolist/services/: project_service.py  task_service.py
src/todolist/storage/: __init__.py  in_memory_storage.py
src/todolist/utils/: config.py  validators.py
tests/: test_models.py  test_services.py
